<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Graficar"
    android:orientation="vertical">

    <com.androidplot.xy.XYPlot
        style="@style/APDefacto.Dark"
        android:id="@+id/plot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:title="@string/titulo"
        app:rangeTitle="@string/rangoE"
        app:domainTitle="@string/tiempo"
        app:lineLabels="left|bottom"
        app:lineLabelRotationBottom="-45"
        app:lineLabelInsetLeft="50dp"
        app:gridInsetLeft="60dp"
        app:graphHeight="100dp"
        />



</LinearLayout>