<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@android:color/background_dark">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dispos_enc"
        android:textSize="30sp"
        android:textAlignment="textStart"
        android:gravity="start"
        android:id="@+id/dispos_enc"
        android:textColor="#FFFFFF"
        android:padding="20dp"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:layout_below="@id/dispos_enc"
        android:id="@+id/dispos"
        android:padding="40dp"/>

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progreso"
        android:layout_above="@id/bt_escaneo"
        android:visibility="invisible"
        android:gravity="center"
        android:padding="20dp"
        android:indeterminateTint="#00F0FF"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escanear"
        android:layout_above="@id/bt_conectar"
        android:id="@+id/bt_escaneo"
        android:padding="40dp"
        android:background="@android:color/holo_blue_bright" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conectar"
        android:id="@+id/bt_conectar"
        android:padding="40dp"
        android:background="@android:color/holo_blue_light"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>